--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title> three.js </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-  <script src="main.js"></script>
-  <script src="three.min.js"></script>
+  <link rel="stylesheet" type="text/css" media="screen" href="./main.css">
+  <script src="./js/three.min.js"></script>
 </head>
 <body>
   
 </body>
+<script src="./js/script.js"></script>
+
 </html>
