--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="./js/three.min.js"></script>
 </head>
 <body>
+  <section><h1> Hello </h1></section>
   
 </body>
 <script src="./js/script.js"></script>
