--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <script src="./js/three.min.js"></script>
 </head>
 <body>
-  <section><h1> Hello </h1></section>
+  <header> 
+    <h1>Hello That's my three.js works</h1>
+  </header>
   
 </body>
 <script src="./js/script.js"></script>
