--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <title> three.js </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="./main.css">
-  <script src="./js/three.min.js"></script>
+  <link rel="stylesheet" type="text/css" media="screen" href="./reset.css">
+  <script src="/js/three.min.js"></script>
 </head>
 <body>
-  <header> 
+  <header class="top"> 
     <h1>Hello That's my three.js works</h1>
   </header>
   
 </body>
-<script src="./js/script.js"></script>
+<script src="/js/script.js"></script>
 
 </html>
