--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header class="top"> 
-    <h1>Hello That's my three.js works</h1>
+    <h1>Hello, That's my three.js and WebGl works</h1>
   </header>
   
 </body>
