--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 </head>
 <body>
   <header class="top"> 
-    <h1>Hello, That's my three.js and WebGl works</h1>
+    <h1>Hey guys, That's my three.js and WebGl work</h1>
   </header>
   
 </body>
 <script src="./js/OrbitControls.js"></script>  
-
 <script src="./js/script.js"></script>
 
 </html>
