--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="/main.css">
   <link rel="stylesheet" type="text/css" media="screen" href="/reset.css">
-  <script src="./js/three.min.js"></script>
+  <script src="/js/three.min.js"></script>
 </head>
 <body>
   <header class="top"> 
@@ -15,7 +15,7 @@
   </header>
   
 </body>
-<script src="./js/OrbitControls.js"></script>  
-<script src="./js/script.js"></script>
+<script src="/js/OrbitControls.js"></script>  
+<script src="/js/script.js"></script>
 
 </html>
